# vie-doc-ingest

./: .gitignore  README.md  ocr.py  pyproject.toml
api/VietPrintIndex/VietPrintIndex.Core/Domain/: Types.fs
pipeline/: README.md  pyproject.toml
pipeline/src/: download_ocr.py
pipeline/src/vie_doc_pipeline/: download_ocr.py  extract_ocr_fulltext.py  read_ocr_fulltext_one.py  run_ocr.py
pipeline/src/vie_doc_pipeline/config/: logging.py
pipeline/src/vie_doc_pipeline/scripts/: run_ocr.py
scripts/: gc_login.sh  gcs_remove.sh  gcs_upload.sh
scripts/thanh-nghi/: download_adhoc.sh  validate_pdfs.sh
thanh-nghi/: .gitignore  download.sh  explode.sh
